[package]
name = "todomvc-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.48", features = ["derive"] }
wasm-logger = "0.2.0"
web-sys = { version = "0.3.60", features = ["HtmlInputElement"] }
yew = "0.19.3"
yewdux = "0.8.2"
